* Add the overlooked reverse() and splice() methods to the sandboxed Array.prototype. [jddalton]

* Add the overlooked sort() method to the sandboxed Array.prototype. [jddalton]